--- a/shinobi-frontend/src/Main.css
+++ b/shinobi-frontend/src/Main.css
@@ -1,11 +1,11 @@
 .main {
   justify-items: center;
-  overflow: hidden;
 }
 
 .inline-components-section {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 @media screen and (min-width: 1000px) {
