--- a/shinobi-frontend/src/Main.css
+++ b/shinobi-frontend/src/Main.css
@@ -115,7 +115,7 @@
 .back-button {
   position: relative;
   width: 2.5rem;
-  height: 2.5rem;
+  aspect-ratio: 1/1;
   color: hsl(var(--clr-white));
   background: linear-gradient(135deg, hsl(var(--clr-red)) 0%, hsl(var(--clr-red) / 0.8) 100%);
   border: 2px solid hsl(var(--clr-red));
@@ -150,19 +150,15 @@
 }
 
 .back-button > b {
-  padding-bottom: 0.5rem;
   text-decoration: none;
   color: hsl(var(--clr-white));
   transition: all 0.3s ease;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 .back-button:hover,
@@ -183,7 +179,7 @@
 @media (max-width: 768px) {
   .back-button {
     width: 2.2rem;
-    height: 2.2rem;
+    aspect-ratio: 1/1;
     font-size: var(--fs-500);
     margin: 1.5rem 0.25rem -4rem;
   }
@@ -197,7 +193,7 @@
 @media (max-width: 480px) {
   .back-button {
     width: 2rem;
-    height: 2rem;
+    aspect-ratio: 1/1;
     font-size: var(--fs-400);
     margin: 1rem 0.25rem -3rem;
   }
