--- a/shinobi-frontend/src/Components/Testimonials/Testimonials.css
+++ b/shinobi-frontend/src/Components/Testimonials/Testimonials.css
@@ -5,8 +5,9 @@
     hsl(var(--clr-dark) / 0.95) 0%, 
     hsl(var(--clr-dark) / 0.98) 100%);
   position: relative;
-  width: 100%;
-  max-width: 98vw;
+  width: 99%;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 .testimonials-section::before {
